[project]
name = "voronoi-maker"
version = "0.1.0"
description = "Apply advanced Voronoi patterns to STL models with shell thickness control and PySide6 preview."
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = { text = "MIT" }
authors = [
    { name = "Voronoi Maker Contributors", email = "devnull@example.com" },
]
dependencies = [
    "trimesh",
    "numpy",
    "scipy",
    "PySide6",
    "vedo",
    "pyvista",
    "typer",
]

[project.urls]
Repository = "https://github.com/your-username/voronoimaker"

[tool.poetry]
packages = [{ include = "voronoimaker", from = "src" }]

[tool.poetry.scripts]
voronoimaker = "voronoimaker.cli:app"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
